fixed more horizontal spacing issues

--- a/andrew-s-portfolio/src/App.css
+++ b/andrew-s-portfolio/src/App.css
@@ -136,9 +136,14 @@ div {
   color: white;
 }
 
+.skills > p {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-size: 100px;
   font-weight: 500;
 }
+
 .skills > ul {
   column-count: 2;
   column-gap: 5px;
@@ -230,7 +235,9 @@ div {
   margin: auto;
   width: 25%;
   position: relative;
+.about > h2 {
   font-size: 100px;
+  width: auto;
   font-weight: 500;
 }
 
